<resources>
    <string name="app_name">Calculator</string>
    <string name="blank"></string>
    <string name="mc">MC</string>
    <string name="mr">MR</string>
    <string name="ms">MS</string>
    <string name="mplus">M+</string>
    <string name="mminus">M-</string>
    <string name="backspace">\u21E4</string>
    <string name="ce">CE</string>
    <string name="c">C</string>
    <string name="plusminus">\u00B1</string>
    <string name="squareroot">\u221a</string>
    <string name="seven">7</string>
    <string name="eight">8</string>
    <string name="nine">9</string>
    <string name="divide">/</string>
    <string name="percent">%</string>
    <string name="four">4</string>
    <string name="five">5</string>
    <string name="six">6</string>
    <string name="multiply">*</string>
    <string name="oneoverx">1/x</string>
    <string name="one">1</string>
    <string name="two">2</string>
    <string name="three">3</string>
    <string name="minus">-</string>
    <string name="equals">=</string>
    <string name="zero">0</string>
    <string name="dot">.</string>
    <string name="plus">+</string>


</resources>
